--- a/PCIeTrans/pcie_memory_rw/pcie_memory_rw.ui
+++ b/PCIeTrans/pcie_memory_rw/pcie_memory_rw.ui
@@ -14,19 +14,6 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>410</x>
-      <y>20</y>
-      <width>61</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>接收窗口</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
@@ -38,19 +25,6 @@
     </property>
     <property name="text">
      <string>发送窗口</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btnClrRcv">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>710</y>
-      <width>91</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>清空接收↑</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btnSnd">
@@ -66,28 +40,12 @@
      <string>发送数据</string>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="txtBro">
-    <property name="geometry">
-     <rect>
-      <x>410</x>
-      <y>50</y>
-      <width>371</width>
-      <height>241</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>微软雅黑</family>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-   </widget>
    <widget class="QPlainTextEdit" name="txtEdit">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>50</y>
-      <width>351</width>
+      <width>761</width>
       <height>241</height>
      </rect>
     </property>
@@ -96,19 +54,6 @@
       <family>Microsoft YaHei</family>
       <pointsize>12</pointsize>
      </font>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btnClrSnd">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>710</y>
-      <width>91</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>清空发送↓</string>
     </property>
    </widget>
    <widget class="QSlider" name="xSlider">
@@ -189,6 +134,35 @@
      <string>z</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="wavProcessButton">
+    <property name="geometry">
+     <rect>
+      <x>590</x>
+      <y>710</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>预处理</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="proBox">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>460</y>
+      <width>81</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>预处理</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -203,38 +177,5 @@
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>btnClrRcv</sender>
-   <signal>clicked()</signal>
-   <receiver>txtBro</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>93</x>
-     <y>470</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>203</x>
-     <y>227</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>btnClrSnd</sender>
-   <signal>clicked()</signal>
-   <receiver>txtEdit</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>231</x>
-     <y>464</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>266</x>
-     <y>430</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
